Tests for mapping parent nodes